--- a/client/src/Components/InfoTables/Search/EditPanel.css
+++ b/client/src/Components/InfoTables/Search/EditPanel.css
@@ -1,7 +1,3 @@
-.hidden{
-display: none;
-}
-
 .options-heading{
 text-align: center;
 font-size: 25px;
@@ -18,4 +14,8 @@ text-align: center;
 .poll-bar{
 display: flex;
 justify-content: end;
+}
+
+#edit-panel{
+	margin-top: 50px;
 }
