--- a/client/src/Components/Lists Components/Filter/FilterContCard.css
+++ b/client/src/Components/Lists Components/Filter/FilterContCard.css
@@ -1,12 +1,14 @@
+/* Filter options holder */
+#filter-options-section{
+	color: var(--lime-green);
+	margin-bottom: 50px;
+}
+
 #filter-options{
-border: 1px solid white;
+border: 1px solid var(--lime-green);
 border-radius: 9px;
 width: 900px;
 padding: 15px;
-}
-
-.hidden{
-display: none;
 }
 
 .options-heading{
@@ -40,69 +42,94 @@ justify-content: center;
 font-size: 12px;
 }
 
-.form-check-label{
-align-items: center; 
-margin-left: 10px;
-}
-
-	/* Code for the checkboxes*/
-
-#Asia-selector{
+/* Code for the checkboxes*/
+#East-Asia-selector{
 grid-area: 1 / 1 / 2 / 2;
 }
-#East-Asia-selector{
+#SouthEast-Asia-selector{
 grid-area: 2 / 1 / 3 / 2;
 }
-#SouthEast-Asia-selector{
+#South-Asia-selector{
 grid-area: 3 / 1 / 4 / 2;
 }
-#South-Asia-selector{
+#Western-Asia-selector{
 grid-area: 4 / 1 / 5 / 2;
 }
-#Western-Asia-selector{
+#Central-Asia-selector{
 grid-area: 5 / 1 / 6 / 2;
 }
-#Central-Asia-selector{
-grid-area: 6 / 1 / 7 / 2;
-}
 
-#Africa-selector{
+#Northern-Africa-selector{
 grid-area: 1 / 2 / 2 / 3;
 }
-#Northern-Africa-selector{
+#Eastern-Africa-selector{
 grid-area: 2 / 2 / 3 / 3;
 }
-#Eastern-Africa-selector{
+#Southern-Africa-selector{
 grid-area: 3 / 2 / 4 / 3;
 }
-#Southern-Africa-selector{
+#Western-Africa-selector{
 grid-area: 4 / 2 / 5 / 3;
 }
-#Western-Africa-selector{
-grid-area: 5 / 2 / 6 / 3;
-}
 #Central-Africa-selector{
-grid-area: 6 / 2 / 7 / 3;
+grid-area: 5 / 2 / 6 / 3;
 }
 
 #Europe-selector{
 grid-area: 1 / 3 / 2 / 4;
 }
 
-#America-selector{
+#Southern-America-selector{
 grid-area: 1 / 4 / 2 / 5;
 }
-#Southern-America-selector{
-grid-area: 2 / 4 / 3 / 5;
-}
 #Northern-America-selector{
-grid-area: 3 / 4 / 4 / 5;
+grid-area: 2 / 4 / 3 / 5;
 }
 
 #Oceania-selector{
 grid-area: 1 / 5 / 2 / 6;
 }
 
+.input-group-text{
+	background-color: var(--background-black);
+	border: var(--lime-green) 1px solid;
+}
+
+.form-check-label{
+	align-items: center; 
+	margin-left: 10px;
+	color: var(--lime-green);
+}
+
+/*Checkbox check mark styles*/
+.form-check-input:checked{
+	background-color: var(--lime-green);
+	border: none;
+	outline: rgba(50, 205, 50, 0.5);
+}
+
+.form-check-input:focus{
+	border: none;
+	outline: none;
+}
+/***************************/
+
+/* cont selector styles */
+.cont-selector-btn{
+	border: var(--lime-green) 1px solid;
+	color: var(--lime-green);
+	background-color: var(--background-black);
+}
+
+.cont-selector-btn:focus{
+	border: var(--lime-green) 1px solid;
+	color: var(--lime-green);
+	background-color: var(--background-black);
+}
+/************************/
+
+
+/*switch from radio buttons to selectors*/
 @media (max-width: 972px)
 {
 
