--- a/client/src/Components/Lists Components/Table/Table.css
+++ b/client/src/Components/Lists Components/Table/Table.css
@@ -5,10 +5,25 @@
 	justify-content: center;
 }
 
-.align-th-text{
-text-align: center;
+.list-table thead th{
+	border-right: 1px solid black;
+	border-left: 1px solid black;
 }
 
-.align-td-text{
-text-align: center;
+.list-table td{
+	border-right: 1px solid white;
+	border-left: 1px solid white;
+	border-bottom: 1px solid white;
+	padding-left: 9px;
+	padding-bottom: 5px;
+}
+
+.list-table th{
+	border-left: 1px solid white;
+	padding-left: 3px;
+}
+
+.list-table thead{
+	background-color: var(--lime-green);
+	color: var(--background-black);
 }
