--- a/client/src/Pages/App.css
+++ b/client/src/Pages/App.css
@@ -17,7 +17,7 @@
 #Earth{
 	width: 300px;
 	height: 300px;
-	background: url("../Assets/Images/home/home-earth.jpg");
+	background: url("../../public/Images/home/home-earth.jpg");
 	background-size: cover;
 	background-repeat: repeat-x;
 	border-radius: 50%;
